--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
-title: Moonwalk
-author: Abhinav Saxena
+title: Dan Xie
+author: Dan Xie
 url: https://www.abhinavsaxena.com/moonwalk # root address of the site
-description: > # description of the site (multiple lines allowed)
-This is a personal website of Dan Xie. 
+description:  This is a personal website of Dan Xie. 
 permalink: /:slug
 
 favicon: "./logo.png" # relative path to site's favicon
